todo title alignement correction

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -101,6 +101,7 @@ nav{
   font-weight: bold;
   text-transform:capitalize;
   top: 1rem;
+  max-width: 80%;
   position: absolute;
 }
 
